--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type = "text/javascript" src="JS/main.js"></script>
     <title>Introdução ao JavaScript</title>
 </head>
 <body>
-        
+   
+    <h1>Minha página</h1>      
+    <button type="button" onclick="clicou()">Clique aqui</button>
+    <h2 id="agradecimento"></h2>
+    <button type="button" onclick="botao()">Clique aqui</button>
+    <br>
+    <button type="button" onclick="redirecionar()" id="clicou">Clique aqui</button>
+    <br>
+    <button type="button" onclick="mesmaPag()">Clique aqui</button>
+
+    <br>
+    <button type="button" onmouseover="mouse()" id="mouse">Clique aqui</button>
 </body>
 </html>
